settings edited commit

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -16,7 +16,7 @@
 
     <style>
         body {
-            background-color: #40433f;
+            background-color: #fffed4;
             font-family: 'Nunito', sans-serif;
             padding-top: 50px;
         }
