main.html edited commit

--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -16,7 +16,7 @@
 
     <style>
         body {
-            background-color: #fffed4;
+            background-color: #e6ffff;
             font-family: 'Nunito', sans-serif;
             padding-top: 50px;
         }
@@ -43,7 +43,7 @@
         .container {
             max-width: 550px;
             margin: auto;
-            background-color: #fff;
+            background-color: #fcffe3;
             -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
             box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
         }
